# pmoc_ml_vercel

./: .editorconfig  .env.example  .gitignore  .htaccess  .prettierrc.json  .vercelignore  CDN_VS_LOCAL_RECOMMENDATION.md  CODE_REVIEW_FINAL_REPORT.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  FIXES_APPLIED.md  MAX_CONNECTIONS_FIX.md  ML_ANALYSIS_FLOW_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  POST_INDEX_DEPLOYMENT_CHECKLIST.md  Procfile  README.md  REFACTORING_GUIDE.md  VERCEL_DEPLOY.md  composer.json  database_indexes.sql  forgot_password.php  index.php  login.php  logout.php  ml_api.php  ml_config.php  ml_dashboard.php  nlg_recommendation_engine.py  phpcs.xml  pyproject.toml  requirements.txt  reset_password.php  retrain_models.ps1  risk_encoder.pkl  risk_model.pkl  service.py  start_service.ps1  test_connection.php  trigger_ml_analysis.php  (+2 more)
admin/: BACKUP_README.md  access_codes.php  admin.php  admin_add.php  admin_dashboard.php  admin_delete.php  admin_edit.php  admin_row.php  admin_toggle_active.php  audit_logs.php  auto_backup.php  backup_database.php  database_backup.php  download_backup.php  email_logs_view.php  profile.php  settings.php  sms_logs.php  sms_logs_view.php
certificates/: activate_certificate.php  certificate_compliance_template.php  certificate_counseling_template.php  certificates.php  generate_certificate.php  get_certificate_info.php  qr_generator.php  revoke_certificate.php  verify_certificate.php  view_certificate.php
counselor/: attendance_checkin.php  attendance_mark.php  completed_sessions.php  counselor_dashboard.php  get_couples.php  (+4 more)
(+84 files in other folders)
